--- a/about-me.html
+++ b/about-me.html
@@ -40,7 +40,7 @@ aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigati
 <div class="row">
 <div class="col-lg-3 col-md-4">
 <div class="about-img">
-<img src="img/myself.jpg" class="rounded-circle" width="100" height="100" alt="Myself picture">
+<img src="https://avatars.githubusercontent.com/u/14926724" class="rounded-circle" width="100" height="100" alt="Myself picture">
 </div>
 </div>
 <div class="col-lg-9 col-md-8">
