--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigati
 </section>
 <div class="container py-1">
 <div class="row justify-content-center">
-<div class="col-md-5">
+<div class="col-md-5 col-sm-6 col-12">
 <div class="card h-100">
 <img class="card-img-top" src="img/fedora-kde-workstation.jpg" alt="Fedora remix image">
 <div class="card-body">
@@ -65,7 +65,7 @@ con diverse funzionalit&agrave; e supporto per l'italiano.
 </div>
 </div>
 </div>
-<div class="col-md-5">
+<div class="col-md-5 col-sm-6 col-12">
 <div class="card mb-4 h-100">
 <img class="card-img-top" src="img/centos-gnome-workstation.jpg" alt="CentOS remix image">
 <div class="card-body">
